fixed background color on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
   max-width: 100vw;
   font-size: 16px;
   font-family: sans-serif;
+  background-color: black;
 }
 
 button,
